link to products works now

--- a/EcoFind/styles.css
+++ b/EcoFind/styles.css
@@ -19,11 +19,12 @@ body {
 }
 
 h1 {
-  color: #14c446;
+  color: #0fa138;
   font-size: 50px;
 }
 
 h2 {
+  color: #14c446;
   font-size: 29px;
 }
 
