--- a/EcoFind/styles.css
+++ b/EcoFind/styles.css
@@ -1,5 +1,5 @@
 body {
-  width: 600px;
+  width: 700px;
   position: relative;
   vertical-align: middle;
   /* font-family: Georgia, serif; */
@@ -40,4 +40,9 @@ h4 {
   float: left;
   width: 33.33%;
   word-break: break-word;
+}
+
+img {
+  max-width: 100%;
+  max-height: 100%;
 }
