--- a/EcoFind/styles.css
+++ b/EcoFind/styles.css
@@ -13,7 +13,6 @@ body {
   background-image: url("/backgroundimage.jpg");
   height: 500px;
   background-position: center;
-  /* background-repeat: no-repeat; */
   background-size: cover;
   position: relative;
 }
@@ -43,6 +42,32 @@ h4 {
 }
 
 img {
-  max-width: 100%;
-  max-height: 100%;
+  max-width: 60%;
+  max-height: 60%;
+}
+
+.product {
+  max-height: 300px;
+  word-break: break-word;
+  flex-direction: row;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  vertical-align: center;
+}
+
+.img {
+  float: left;
+  width: 40%;
+  margin-left: 3%;
+  margin-top: 5%;
+  margin-bottom: 5%;
+}
+
+.row {
+  float: right;
+  width: 60%;
+  font-size: 20px;
+  margin-left: 5%;
+  margin-right: 3%;
 }
